--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   camera: ^0.10.0+4
+  http: ^0.13.5
+  flutter_lints: ^2.0.1
+  image_picker: ^0.8.6
+  path_provider: ^2.0.11
+  radio_group_v2: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +53,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
