--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.8.6
   path_provider: ^2.0.11
   radio_group_v2: ^1.0.2
+  intl: ^0.18.0
+  sqflite: ^2.2.2
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
