--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,18 @@ dependencies:
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
-    cupertino_icons: ^1.0.2
+    cupertino_icons: ^1.0.5
     flutter_spinkit: ^5.1.0
-    camera: ^0.10.0+4
+    camera: ^0.10.1
     http: ^0.13.5
     flutter_lints: ^2.0.1
     image_picker: ^0.8.6
     path_provider: ^2.0.11
     radio_group_v2: ^1.0.2
-    intl: ^0.18.0
+    intl: ^0.17.0
     sqflite: ^2.2.2
     path: ^1.8.2
+    syncfusion_flutter_charts: ^20.4.41
 
 dev_dependencies:
     flutter_test:
